<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NiveshColorAppBg"
    tools:context="com.nivesh.production.bajajfd.ui.fragment.StepFiveBajajFDFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/linearLayoutTwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_80"
        android:padding="@dimen/margin_5"
        android:background="@color/NiveshColorAppBg"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="@dimen/margin_1"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/topLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="@dimen/margin_150"
                            android:layout_height="@dimen/margin_18"
                            android:layout_marginTop="@dimen/margin_15"
                            android:layout_marginStart="@dimen/margin_15"
                            android:contentDescription="@string/contentDescription"
                            android:src="@drawable/bajaj_logo"
                            app:layout_constraintBottom_toTopOf="@+id/tvFdRating"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvFdRating"
                            style="@style/regularStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/margin_15"
                            android:paddingEnd="@dimen/margin_1"
                            android:text="@string/schemeRating"
                            android:textColor="@color/greyColor2"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/logo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_120"
                        android:background="@color/greyColor4"
                        android:paddingBottom="@dimen/margin_10"
                        app:layout_constraintTop_toBottomOf="@+id/topLayout">

                        <TextView
                            android:id="@+id/tvCongrats"
                            style="@style/semiBoldStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_12"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_17"
                            android:text=""
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvSuccessMessage"
                            style="@style/regularStyle"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_15"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_16"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCongrats" />

                        <TextView
                            android:id="@+id/tvSuccessMsgDetail"
                            android:visibility="gone"
                            style="@style/regularStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/certificateOnEmail"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.393"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvSuccessMessage" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_15"
        android:layout_marginStart="@dimen/margin_170"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/viewOrder"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:backgroundTint="@color/blue"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_marginStart="@dimen/margin_70"
        android:layout_marginBottom="@dimen/margin_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>